tests/ui/explicit-tail-calls/signature-mismatch.stderr
error: mismatched signatures
  --> $DIR/signature-mismatch.rs:5:5
   |
LL |     become _g0();
   |     ^^^^^^^^^^^^
   |
   = note: `become` requires caller and callee to have matching signatures
   = note: caller signature: `fn(())`
   = note: callee signature: `fn()`

error: mismatched signatures
  --> $DIR/signature-mismatch.rs:11:5
   |
LL |     become _g1(());
   |     ^^^^^^^^^^^^^^
   |
   = note: `become` requires caller and callee to have matching signatures
   = note: caller signature: `fn()`
   = note: callee signature: `fn(())`

error: mismatched function ABIs
  --> $DIR/signature-mismatch.rs:17:5
   |
LL |     become _g2();
   |     ^^^^^^^^^^^^
   |
   = note: `become` requires caller and callee to have the same ABI
   = note: caller ABI is `"C"`, while callee ABI is `"Rust"`

error: mismatched function ABIs
  --> $DIR/signature-mismatch.rs:23:5
   |
LL |     become _g3();
   |     ^^^^^^^^^^^^
   |
   = note: `become` requires caller and callee to have the same ABI
   = note: caller ABI is `"Rust"`, while callee ABI is `"C"`

error: aborting due to 4 previous errors

